--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1"
   }
 }
