--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "test": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,11 @@
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1"
+  },
+  "devDependencies": {
+    "css-loader": "^3.0.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5"
   }
 }
