--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "jquery": "^3.4.1",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1"
