Finish refactoring client side JS and CSS to work with webpack bundling.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "webpack && node app.js",
     "build": "webpack",
-    "test": "nodemon"
+    "test": "webpack && nodemon"
   },
   "repository": {
     "type": "git",
