--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "webpack --config webpack.dev.config.js && node ./app.js",
-    "build": "webpack --config webpack.prod.config.js && node ./app.js",
+    "start": "webpack --config webpack.dev.config.js && node ./build/server.bundle.js",
+    "build": "webpack --config webpack.server.config.js",
+    "buildProd": "webpack --config webpack.prod.config.js && node ./app.js",
     "test": "webpack && nodemon"
   },
   "repository": {
@@ -34,8 +35,12 @@
   },
   "devDependencies": {
     "css-loader": "^3.0.0",
+    "handlebars-webpack-plugin": "^1.6.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "popper.js": "^1.15.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5"
+    "webpack-cli": "^3.3.5",
+    "webpack-node-externals": "^1.7.2"
   }
 }
