--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "express-handlebars": "^3.1.0",
     "jquery": "^3.4.1",
     "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "sequelize": "^5.9.4"
   },
   "devDependencies": {
     "css-loader": "^3.0.0",
