--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "jquery": "^3.4.1",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
-    "nodemon": "^1.19.1"
-  },
-  "devDependencies": {
+    "nodemon": "^1.19.1",
     "css-loader": "^3.0.0",
-    "handlebars-webpack-plugin": "^1.6.0",
     "mini-css-extract-plugin": "^0.7.0",
     "popper.js": "^1.15.0",
-    "style-loader": "^0.23.1",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-node-externals": "^1.7.2"
+  },
+  "devDependencies": {
+    "handlebars-webpack-plugin": "^1.6.0",
+    "style-loader": "^0.23.1"
   }
 }
