--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "webpack --config webpack.dev.config.js && node ./build/server.bundle.js",
+    "start": "webpack --config webpack.server.config.js && webpack --config webpack.dev.config.js && node ./build/server.bundle.js",
     "build": "webpack --config webpack.server.config.js",
     "buildProd": "webpack --config webpack.prod.config.js && node ./app.js",
     "test": "webpack && nodemon"
@@ -26,24 +26,25 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "css-loader": "^3.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-sanitizer": "^1.0.5",
     "jquery": "^3.4.1",
+    "mini-css-extract-plugin": "^0.7.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1",
-    "sequelize": "^5.9.4"
-  },
-  "devDependencies": {
-    "css-loader": "^3.0.0",
-    "handlebars-webpack-plugin": "^1.6.0",
-    "mini-css-extract-plugin": "^0.7.0",
     "popper.js": "^1.15.0",
-    "style-loader": "^0.23.1",
+    "sequelize": "^5.9.4",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-node-externals": "^1.7.2"
+  },
+  "devDependencies": {
+    "handlebars-webpack-plugin": "^1.6.0",
+    "style-loader": "^0.23.1"
   }
 }
